# parallel-n64

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  07 - Libretro API Testing and Validation.md  10 - Input + Audio.md  Makefile  Makefile.common  Makefile_.common  README.md  angrylion-backport.diff  appveyor.yml  customprocessrdplist.diff  experdiff.diff  test_libretro.html
.github/workflows/: codeql.yml
Graphics/: 3dmath.h  3dmaths.c  GBI.h  image_convert.h  plugin.h
Graphics/RDP/: RDP_state.c  RDP_state.h  gDP_funcs.cpp  gDP_funcs.h  gDP_funcs_C.c  gDP_funcs_C.h  gDP_funcs_prot.h  gDP_state.h
Graphics/RSP/: RSP_state.c  RSP_state.h  gSP_funcs.cpp  gSP_funcs.h  gSP_funcs_C.c  gSP_funcs_C.h  gSP_funcs_prot.h  gSP_state.h
angrylionrdp/: CREDITS.txt  Gfx #1.3.h  main.h  n64video.c  n64video_main.c  n64video_rdp.c  n64video_vi.c  rdp.h  vi.h  z64.h
docs/cpu/: HOTSTATE_MIGRATION.md
gles2angrylion/: main.cpp  main.h  n64video.cpp  n64video_main.cpp  tctables.h
gles2glide64/src/: glide_funcs.h
gles2n64/: cpufeatures.c  cpufeatures.h
gles2n64/src/: 2xSAI.c  2xSAI.h  3DMath.c  3DMath.cpp  3DMath.h  3DMathNeon.c  CRC.c  CRC.cpp  CRC.h  Combiner.h  Combiner_gles2n64.c  Common.h  Config.c  Config.cpp  Config.h  DepthBuffer.c  DepthBuffer.h  F3D.c  F3D.h  F3DCBFD.c  F3DCBFD.h  F3DDKR.c  F3DDKR.h  F3DEX.c  F3DEX.h  F3DEX2.c  F3DEX2.h  F3DEX2CBFD.c  F3DEX2CBFD.h  F3DPD.c  F3DPD.h  F3DSWSE.c  F3DSWSE.h  F3DWRUS.c  F3DWRUS.h  FrameBuffer.c  FrameBuffer.h  FrameBuffer_gles2n64.c  GBI.c  GBI.cpp  (+51 more)
gles2rice/src/: Blender.cpp  Blender.h  CSortedList.h  Combiner.cpp  Combiner.h  CombinerDefs.h  Config.cpp  Config.h  ConvertImage.cpp  ConvertImage.h  ConvertImage16.cpp  Debugger.cpp  Debugger.h  DecodedMux.cpp  DecodedMux.h  DeviceBuilder.cpp  DirectXDecodedMux.cpp  DirectXDecodedMux.h  ExtendedRender.h  FrameBuffer.cpp  FrameBuffer.h  IColor.h  (+59 more)
glide2gl/: todo!.txt
jni/: .Android.mk.swp  Android.mk  Application.mk
libretro/: SDL.h  SDL_mutex.h  SDL_opengl.h  SDL_opengles2.h  adler32.c  audio_plugin.c  brumme_crc.c  cc_resampler.c  glide64_crc.c  glsym.c  glsym.h  input_plugin.c  libretro.c  libretro_core_options.h  libretro_crc.c  libretro_memory.h  libretro_perf.h  libretro_private.h  nearest.c  opengl_state_machine.c  opengl_state_machine.h  performance.c  resampler.c  resampler.h  retroarch_logger.h  sinc.c  utils.c  utils.h  utils_neon.S
mupen64plus-audio-libretro/: audio_plugin.c  audio_plugin.h  audio_resampler_driver.c  audio_utils.c  plugin.c  utils.c  utils.h  utils_neon.S
mupen64plus-input-libretro/: input_plugin.c  plugin.c  plugin.h  version.h
mupen64plus-rsp-cxd4/: README.md  Rsp_#1.1.h  bench.h  config.h  execute.h  matrix.h  module.c  my_types.h  rsp.c  rsp.h  rsp_dump.cpp  rsp_dump.h  su.c  su.h  tags
mupen64plus-rsp-cxd4-new/: module.c  module.h  my_types.h  rsp.h  su.c
mupen64plus-rsp-hle/: LIBRETRO.changes
mupen64plus-rsp-paraLLEl/: .gitignore  .gitrepo  CMakeLists.txt  CREDITS.txt  Makefile  Rsp_#1.1.h  debug_jit.cpp  debug_jit.hpp  jit.cpp  jit.hpp  jit_allocator.cpp  main.cpp  parallel.cpp  rsp.cpp  rsp.hpp  rsp_disasm.hpp  rsp_jit.cpp  rsp_jit.hpp  rsp_op.hpp  state.hpp
mupen64plus-rsp-paraLLEl/arch/x86_64/rsp/: clamp.h  rsp.h  rsp_core.cpp  rsp_impl.h  vabs.h  vadd.h  vaddc.h  vand.h  vch.h  vcl.h  vcmp.h  vcr.h  vdivh.h  vmac.h  vmov.h  vmrg.h  vmudh.h  vmul.h  vmulh.h  vmull.h  vmulm.h  vmuln.h  vor.h  vrcpsq.h  vrsq.h  vsub.h  vsubc.h  vxor.h
mupen64plus-rsp-paraLLEl/lightning/: ChangeLog
mupen64plus-rsp-paraLLEl/lightning/check/: Makefile.am  gen_cbit.c  lightning.c
mupen64plus-rsp-paraLLEl/lightning/doc/: body.texi
mupen64plus-rsp-paraLLEl/lightning/lib/: jit_aarch64.c  lightning.c
mupen64plus-rsp-paraLLEl/rsp/: cp0.cpp  cp2.cpp  ls.cpp  pipeline.h  reciprocal.cpp  reciprocal.h  vfunctions.cpp
mupen64plus-rsp-paraLLEl/win32/mman/sys/: mman.c  mman.h
mupen64plus-rsp-z64/: main_rsp.cpp  rsp.cpp  rsp.h  rsp_dasm.cpp  rsp_gen.cpp  rsp_gen.h  rsp_opinfo.cpp  rsp_opinfo.h  rsp_recomp.h  z64.h  z64_main_rsp.cpp  z64_rsp.cpp  z64_rsp_opinfo.cpp  z64_rsp_recomp.cpp
mupen64plus-video-angrylion/: Gfx #1.3.h  common.h  interface.c  interface.cpp  n64video.c  n64video.h  n64video_main.c  n64video_rdp.c  n64video_vi.c  parallel_al.c  parallel_al.cpp  parallel_al.h  rdp.h  rdp_dump.c  rdp_dump.h  rdp_emit.c  rdp_emit.h  rdp_emit_backend.h  rdp_emit_bridge.c  rdp_emit_bridge.h  rdp_emit_f3d.c  rdp_emit_f3d.h  rdp_emit_f3ddkr.c  rdp_emit_f3ddkr.h  rdp_emit_f3dex2.c  rdp_emit_f3dex2.h  rdp_emit_frontend.c  rdp_emit_frontend.h  rdp_emit_hle.c  rdp_emit_hle.h  rdp_emit_recip.h  rdp_emit_rsp.c  rdp_emit_rsp.h  rdp_emit_s2dex.c  rdp_emit_s2dex.h  screen.h  tctables.h  vdac.c  vdac.h  vi.h  (+1 more)
mupen64plus-video-angrylion-thr/: gfx_m64p.h  interface.cpp  n64video.c  n64video.h  n64video_main.c  parallel_al.h  rdp.c  rdp.h  screen.h
mupen64plus-video-angrylion_bak/: n64video.c  n64video_main.c  rdp.h  tctables.h  z64.h
mupen64plus-video-paraLLEl/: CREDITS.txt  Gfx #1.3.h  format_all.sh  parallel.cpp  parallel.h  parallel_hle.cpp  rdp.cpp  rdp.hpp  rdp_dump.c  rdp_dump.h  vi.cpp  z64.h
mupen64plus-video-paraLLEl/parallel-rdp/parallel-rdp/: CMakeLists.txt  command_ring.cpp  rdp_common.hpp  rdp_data_structures.hpp  rdp_device.cpp  rdp_device.hpp  rdp_renderer.cpp  rdp_renderer.hpp  video_interface.cpp  video_interface.hpp  worker_thread.hpp
mupen64plus-video-paraLLEl/parallel-rdp/parallel-rdp/shaders/: binning.h  blender.h  coverage.h  data_structures.h  debug.h  depth_blend.comp  extract_vram.comp  interpolation.h  load_span_setup.h  memory_interfacing.h  shading.h  slangmosh.json  slangmosh_mac.hpp  span_setup.comp  store_span_setup.h  tile_binning.comp  tile_binning_combined.comp  tile_binning_prepass.comp  ubershader.comp  vi_blend_fields.frag  vi_debug.h  vi_scale.frag
scripts/: Dockerfile  build-mac-arm.sh  build-mac-intel.sh  build-mac.sh  build-nix.sh  build-nix64.sh  build-win-manjaro.sh  build-win32.sh  build-win64.sh  clean.sh
tools/: gas-preprocessor-new.pl  gen_romdb.py  m64pmigrate.c  pj64tosrm.c
(+1450 files in other folders)
